--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.23.0",
-    "movie-trailer": "^2.1.0",
+    "axios": "^1.6.2",
+    "movie-trailer": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-youtube": "^7.13.1",
     "web-vitals": "^1.1.2"
   },
